--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nextjs-pokedex",
   "version": "0.1.0",
+  "packageManager": "yarn@3.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
