--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.8.0"
   }
